[tool.poetry]
name = "rest-flask-study"
version = "0.1.0"
description = ""
authors = ["Augusto <augustovanderley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
flask-pydantic-spec = "^0.3.0"

[tool.poetry.dev-dependencies]
httpie = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
